--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ steps:
 - script: |
     npm install -g @angular/cli
     npm install
+    npm audit
     ng build --prod
   displayName: 'npm install and build'
 - task: ArchiveFiles@2
