--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
     npm install -g @angular/cli
     npm install
     npm audit fix --force
-    ng build --prod
+    ng build --configuration production
   displayName: 'npm install and build'
 - task: ArchiveFiles@2
   displayName: 'Archive files'
